# saturday_agent

./: .gitignore  memory.sqlite
apps/agent/: README.md  pyproject.toml
apps/agent/src/saturday_agent/: __init__.py  usage_trace.py
apps/agent/src/saturday_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/agent/src/saturday_agent/agents/: __init__.py
apps/agent/src/saturday_agent/agents/complex/: __init__.py  graph.py  prompts.py
apps/agent/src/saturday_agent/agents/moderate/: __init__.py  graph.py  prompts.py
apps/agent/src/saturday_agent/agents/simple/: __init__.py  graph.py  prompts.py
apps/agent/src/saturday_agent/llms/: __init__.py  ollama_chat.py  registry.py  vision_registry.py
apps/agent/src/saturday_agent/rag/: __init__.py  embeddings.py  qdrant_store.py  retriever.py
apps/agent/src/saturday_agent/rag/ingest/: __init__.py  chunking.py  pdf_extract.py  persist.py  qdrant_index.py
apps/agent/src/saturday_agent/routing/: __init__.py  policies.py  router.py
apps/agent/src/saturday_agent/runtime/: __init__.py  config.py  registry.py  tracing.py
apps/agent/src/saturday_agent/state/: __init__.py  models.py
apps/agent/src/saturday_agent/tools/: __init__.py  langgraph_adapter.py  rag_delete_doc.py  rag_ingest_pdf.py  rag_list_docs.py  rag_qdrant.py  registry.py  search_tavily.py  vision_ollama.py
apps/agent/src/saturday_agent/tools/builtins/: __init__.py
apps/api/: requirements.txt  saturday.db  saturday.db-shm  saturday.db-wal
docs/: debloat-audit.md  debloat-baseline-runbook.md
scripts/: run-all.sh  smoke.py
(+105 files in other folders)
